kubernetes/sample/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-api
  namespace: mini-api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: thinktecturelabs/cert-manager-sample-api:0.0.1
        name: main
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 75m
            memory: 96Mi
