kubernetes/sample/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mini-api
  namespace: mini-api
  labels:
    app: api
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: api
  type: ClusterIP
