kubernetes/sample/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingressrule
  namespace: mini-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - miniapi.thinktecture-demos.com
    secretName: miniapi-production-certificate
  rules:
    - host: miniapi.thinktecture-demos.com
      http:
        paths:
          - path: /
            backend:
              serviceName: miniapi
              servicePort: 8080
